--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -60,16 +60,20 @@ ENV LANG ru_RU.UTF-8
 
 RUN groupadd -r grp1cv8 --gid=$onec_gid \
   && useradd -r -g grp1cv8 --uid=$onec_uid --home-dir=/home/usr1cv8 --shell=/bin/bash usr1cv8 \
-  && mkdir -p /var/log/1C /home/usr1cv8/.1cv8/1C/1cv8/conf \
-  && chown -R usr1cv8:grp1cv8 /var/log/1C /home/usr1cv8
+  && mkdir -p /opt/1C/v8.3/x86_64/conf /home/usr1cv8/.1cv8 /var/log/1C \
+  && chown -R usr1cv8:grp1cv8 /opt/1C /home/usr1cv8 /var/log/1C \
+  && chmod g+rw /var/log/1C
 
 VOLUME /home/usr1cv8/.1cv8/ /var/log/1C
 
-COPY ./server/logcfg.xml /home/usr1cv8/.1cv8/1C/1cv8/conf
+COPY ./configs/server/rootfs/ /
 
 COPY ./server/docker-entrypoint.sh /usr/local/bin
 RUN ln -s usr/local/bin/docker-entrypoint.sh / # backwards compat
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 1540 1541 1560
+
+USER usr1cv8
+
 CMD ["ragent"]
