--- a/client-vnc/Dockerfile
+++ b/client-vnc/Dockerfile
@@ -45,11 +45,11 @@ ENV LANG ru_RU.UTF-8
 RUN tar xzf /tmp/s6-overlay-amd64.tar.gz -C / \
   && rm -rf /tmp/s6-overlay-amd64.tar.gz
 
-RUN groupadd -r usr1cv8 --gid=2001 \
-  && useradd -r -g usr1cv8 --uid=2001 --home-dir=/home/usr1cv8 --shell=/sbin/nologin usr1cv8 \
+RUN groupadd -r grp1cv8 --gid=2001 \
+  && useradd -r -g grp1cv8 --uid=2001 --home-dir=/home/usr1cv8 --shell=/sbin/nologin usr1cv8 \
   && mkdir -p /home/usr1cv8/.1cv8 \
   && mkdir -p /home/usr1cv8/.1C/1cestart \
-  && chown -R usr1cv8:usr1cv8 /home/usr1cv8
+  && chown -R usr1cv8:grp1cv8 /home/usr1cv8
 
 COPY ./configs/client-vnc/rootfs/ /
 
