--- a/ws/Dockerfile
+++ b/ws/Dockerfile
@@ -75,6 +75,10 @@ COPY ./configs/server/rootfs/ /
 STOPSIGNAL SIGWINCH
 
 COPY ./ws/apache2-foreground /usr/local/bin/
+
+RUN chmod 755 /usr/local/bin/apache2-foreground \
+  && chmod +x /usr/local/bin/apache2-foreground
+
 WORKDIR /var/www
 
 EXPOSE 80
