--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,6 +164,7 @@ run:vnc:
   image:
     name: $CONTAINER_TEST_IMAGE
     entrypoint: [""]
+  before_script: []
   script:
     - bash -c "/opt/1C/v8.3/x86_64/1cv8 CREATEINFOBASE File=./build/db /DumpResult ./build/create.log"
   rules:
