--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,18 +161,13 @@ run:vnc:
   stage: test
   variables:
     CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE/client-vnc:$ONEC_VERSION
-  image:
-    name: $CONTAINER_TEST_IMAGE
-    entrypoint: [""]
-  before_script: []
   script:
-    - bash -c "/opt/1C/v8.3/x86_64/1cv8 CREATEINFOBASE File=./build/db /DumpResult ./build/create.log"
+    - docker pull $CONTAINER_TEST_IMAGE
+    - docker run --rm $CONTAINER_TEST_IMAGE bash -c "/opt/1C/v8.3/x86_64/1cv8 CREATEINFOBASE File=./build/db /DumpResult ./build/create.log"
   rules:
     - if: '$INSTALLER_TYPE == "client"'
     - if: '$INSTALLER_TYPE == "client-vnc"'
     - if: '$BUILD_ALL == "true"'
-  tags:
-    - docker
 
 run:server:
   stage: test
