--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,7 +13,8 @@ RUN apk --no-cache add bash curl grep \
   && chmod +x /download.sh \
   && sync; /download.sh \
   && for file in *.tar.gz; do tar -zxf "$file"; done \
-  && rm -rf *.tar.gz
+  && rm -rf *.tar.gz \
+  && rm ./*-thin-*.deb
 
 FROM ubuntu:18.04 as base1
 
@@ -32,11 +33,19 @@ WORKDIR /tmp
 SHELL ["/bin/bash", "-c"]
 RUN set -xe; \
   if [ "$nls" = true ]; then \
-    dpkg -i 1c-enterprise83-{common,server}_*.deb; \
-    dpkg -i 1c-enterprise83-{common,client}*.deb; \
+    dpkg -i 1c-enterprise*-{common,server}_*.deb; \
+    dpkg -i 1c-enterprise*-{common,client}*.deb; \
   else \
-    dpkg -i 1c-enterprise83-{common,server,client}_*.deb; \
+    dpkg -i 1c-enterprise*-{common,server,client}_*.deb; \
   fi
+
+# create symlink to current 1c:enterprise directory
+COPY ./scripts/create-symlink-to-current-1cv8.sh /create-symlink-to-current-1cv8.sh
+RUN chmod +x /create-symlink-to-current-1cv8.sh \
+  && /create-symlink-to-current-1cv8.sh \
+  && rm /create-symlink-to-current-1cv8.sh
+
+COPY ./configs/client/current/ /opt/1cv8/current/
 
 FROM ubuntu:18.04 as client
 LABEL maintainer="Anton Kvashenkin <anton.jugatsu@gmail.com> (@jugatsu)"
@@ -89,19 +98,31 @@ COPY --from=base2 /opt /opt
 ADD https://github.com/just-containers/s6-overlay/releases/download/v1.21.8.0/s6-overlay-amd64.tar.gz /tmp/
 
 RUN apt-get update \
+  && apt-mark hold iptables \
+  && env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+    dbus-x11 \
+    psmisc \
+    xdg-utils \
+    x11-xserver-utils \
+    x11-utils \
+    xvfb \
+    x11vnc \
+  && env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+    xfce4 \
+    # Additional GUI utilities, optional
+    xfce4-goodies \
+  && sed -i 's%<property name="ThemeName" type="string" value="Xfce"/>%<property name="ThemeName" type="string" value="Raleigh"/>%' /etc/xdg/xfce4/xfconf/xfce-perchannel-xml/xsettings.xml \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     dirmngr \
     gnupg \
   && echo "deb http://http.debian.net/debian/ stretch main contrib non-free" > /etc/apt/sources.list \
+  && echo "deb http://http.debian.net/debian/ stretch-backports main" >> /etc/apt/sources.list \
   && echo "deb http://http.debian.net/debian/ stretch-updates main contrib non-free" >> /etc/apt/sources.list \
   && echo "deb http://security.debian.org/ stretch/updates main contrib non-free" >> /etc/apt/sources.list \
   && echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections \
-  && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 40976EAF437D05B5 \
-  && echo "deb http://security.ubuntu.com/ubuntu xenial-security main" > /etc/apt/sources.list.d/xenial-security.list \
   && apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
       ca-certificates \
-      git \
       locales \
       libwebkitgtk-3.0-0 \
       ttf-mscorefonts-installer \
@@ -109,13 +130,19 @@ RUN apt-get update \
       libgsf-1-114 \
       libglib2.0-0 \
       libodbc1 \
-      libpng12-0 \
+      libtcmalloc-minimal4 \
       libmagickwand-6.q16-3 \
-      dbus-x11 \
       at-spi2-core \
       procps \
-      xvfb \
-      x11vnc \
+  # Install libpng12-0 from xenial
+  && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 40976EAF437D05B5 \
+  && echo "deb http://security.ubuntu.com/ubuntu xenial-security main" > /etc/apt/sources.list.d/xenial-security.list \
+  && apt-get update \
+  && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+      libpng12-0 \
+  # Install git from backports
+  && DEBIAN_FRONTEND=noninteractive apt-get -t stretch-backports install -y --no-install-recommends \
+    git \
   && rm -rf  \
     /var/lib/apt/lists/* \
     /var/cache/debconf \
