--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
+image: registry.git.a/pet4adm/images/docker/gitlab-runner:latest
+
 default:
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
-  tags:
-    - 1c
 
 stages:
   - build client
